Add a way to select the java version for the image